log
Fri Apr 17 07:01:43 PM UTC 2026: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
0bf2c83
Fri Apr 17 07:03:50 PM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
519f57d
Fri Apr 17 07:04:39 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
2a6ff14
Fri Apr 17 07:06:24 PM UTC 2026: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:80:10: error: unused variable ‘i’ [-Werror=unused-variable]
   80 |     long i = 1; // Empieza una posicion a la derecha
      |          ^
cc1: all warnings being treated as errors
0ec2e13
Fri Apr 17 07:06:53 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
00d551b
Fri Apr 17 07:08:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c2c306
Fri Apr 17 07:08:32 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
cdc2d1f
Fri Apr 17 07:09:31 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:24: error: comparison between pointer and integer [-Werror]
   75 |     if ((map->capacity == NULL) || (map->capacity == 0)) return NULL;
      |                        ^~
cc1: all warnings being treated as errors
4e000ca
Fri Apr 17 07:09:53 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
6525371
Fri Apr 17 07:11:08 PM UTC 2026: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
918e007
Fri Apr 17 07:15:01 PM UTC 2026: 
 hashmap.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
 tests:  3|6
total_score: 10/60
e32224c
Fri Apr 17 07:21:31 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
e4a057d
Sat Apr 18 10:02:24 PM UTC 2026: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘new_map’ undeclared (first use in this function)
   49 |     new_map->buckets = (Pair**)calloc(capacity,sizeof(Pair))
      |     ^~~~~~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:49:61: error: expected ‘;’ before ‘map’
   49 |     new_map->buckets = (Pair**)calloc(capacity,sizeof(Pair))
      |                                                             ^
      |                                                             ;
   50 |     map->capacity = capacity;
      |     ~~~                                                      
a15fdb0
